Fixed display problem where only 3 lines of text were visible for channels.
git-svn-id: https://svn.participatoryculture.org/svn/dtv/trunk@4146 bce20531-a64c-4166-8316-56baf4a01729

Original sha1: 3a672661c9a86c9f577c08adf190f7177b7d49ce

--- a/tv/resources/css/main.css
+++ b/tv/resources/css/main.css
@@ -804,7 +804,8 @@ an element is dragged, the drag-highlight class is added to it */
      */
     background: url(../images/main-video-bg.png) repeat-x;
     background-position: 0px -70px;
-    height: 20px;
+    font-size: 12px;
+    padding: 4px 0px;
 }
 
 .selected .main-video-bottom { 
